fixed border collapse on task divs

--- a/style/style.css
+++ b/style/style.css
@@ -1,137 +1,131 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
-
-.title{
-    width: 100%;
-    height: 10rem;
-    background-color: rgb(38, 97, 38);
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+.title {
+  width: 100%;
+  height: 10rem;
+  background-color: rgb(38, 97, 38);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .title h1 {
-    color: #fff;
-    margin-left: 5rem;
-    font-size: 3.2rem;
+  color: #fff;
+  margin-left: 5rem;
+  font-size: 3.2rem;
 }
 
 .content {
-    width: 80%;
-    height: 10rem;
-    padding: 2.4rem 0;
-    margin: 0 5rem;
+  width: 80%;
+  height: 10rem;
+  padding: 2.4rem 0;
+  margin: 0 5rem;
 }
 
-.content h2{
-    margin-bottom: 1.2rem;
-    font-size: 2.4rem;
+.content h2 {
+  margin-bottom: 1.2rem;
+  font-size: 2.4rem;
 }
 
 .input-bar {
-    width: 100%;
+  width: 100%;
 
-    display: flex;
-    gap: 1.8rem;
-
+  display: flex;
+  gap: 1.8rem;
 }
 
 .message {
-    color: rgb(38, 97, 38);
-    margin-bottom: 1.2rem;
-    font-size: 1.2rem;
+  color: rgb(38, 97, 38);
+  margin-bottom: 1.2rem;
+  font-size: 1.2rem;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .textArea {
-    width: 50rem;
-    height: 3.6rem;
-    padding-left: 1.2rem;
-    font-size: 1.6rem;
+  width: 50rem;
+  height: 3.6rem;
+  padding-left: 1.2rem;
+  font-size: 1.6rem;
 }
 
-.textArea:focus{
-    outline: rgb(31, 31, 255);
-    border: 1px solid rgb(31, 31, 255);
+.textArea:focus {
+  outline: rgb(31, 31, 255);
+  border: 1px solid rgb(31, 31, 255);
 }
 
-.btn-submit{
-    background-color: black;
-    border: none;
-    color: white;
-    padding: 1rem;
-    transition: all .2s;
+.btn-submit {
+  background-color: black;
+  border: none;
+  color: white;
+  padding: 1rem;
+  transition: all 0.2s;
 }
 
 .btn-submit:active {
-    background-color: #ddd;
-    color: black;
+  background-color: #ddd;
+  color: black;
 }
 
 .tasks {
-    /* background-color: red; */
-    margin: 5rem 5rem;
-    height: 100px;
+  /* background-color: red; */
+  margin: 5rem 5rem;
+  height: 100px;
 }
 
 .tasks h2 {
-    font-size: 2.4rem;
+  font-size: 2.4rem;
 }
 
 .task {
-    padding: 1.2rem 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid black;
-   
+  padding: 1.2rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid black;
+  margin: -1px 0 -1px 0;
 }
 
 .task-content {
-    color: #333;
-    padding-left: 1.2rem;
-    font-size: 1.6rem;
+  color: #333;
+  padding-left: 1.2rem;
+  font-size: 1.6rem;
 }
 
-.btn-tasks button:last-child{
-    margin-right: 1.2rem;
+.btn-tasks button:last-child {
+  margin-right: 1.2rem;
 }
 
-.btn-tasks button{
-    padding: .8rem 1.2rem;
-    border: none;
-    background-color: black;
-    color: white;
-    font-size: 1.4rem;
+.btn-tasks button {
+  padding: 0.8rem 1.2rem;
+  border: none;
+  background-color: black;
+  color: white;
+  font-size: 1.4rem;
 }
-
-
 
 .btn-edit {
-    background-color: rgb(38, 97, 38) !important;
+  background-color: rgb(38, 97, 38) !important;
 }
 
-.btn-edit:active{
-    background-color: rgb(72, 78, 72) !important;
+.btn-edit:active {
+  background-color: rgb(72, 78, 72) !important;
 }
 
-.btn-del{
-    background-color: red !important;
+.btn-del {
+  background-color: red !important;
 }
 
-.btn-del:active{
-    background-color: rgb(231, 97, 97) !important;
+.btn-del:active {
+  background-color: rgb(231, 97, 97) !important;
 }
-
-
